--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 spring.datasource.url=jdbc:h2:~/planner.db
 spring.datasource.driverClassName=org.h2.Driver
+server.port=8080
+spring.jpa.defer-datasource-initialization= true
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.initialization-mode=always
